primitives/runtime-interface/tests/ui/pass_by_enum_with_value_variant.rs
use sp_runtime_interface::pass_by::PassByEnum;

#[derive(PassByEnum)]
enum Test {
	Var0(u32),
}

fn main() {}
